--- a/css/style.css
+++ b/css/style.css
@@ -520,7 +520,7 @@ section {
 
 @media screen and (max-width: 300px) {
   .boton {
-    border-radius: none;
+    border-radius: 0;
     border: none;
     padding: 0;
   }
