--- a/css/style.css
+++ b/css/style.css
@@ -597,8 +597,6 @@ section {
 #habilidades {
   margin: 0 auto;
   padding: 70px 5%;
-  width: 90%;
-  max-width: 1120px;
 }
 #habilidades h3 {
   margin: 0 auto;
@@ -609,6 +607,7 @@ section {
   margin-left:  auto;
   margin-right: auto;
   text-align: center;
+  width: 90%;
 }
 .listahabilidades {
   padding-top: 30px;
@@ -620,7 +619,7 @@ section {
   gap: 10px;
   color: var(--text-color);
   margin: 0 auto;
-  width: 90%;
+  max-width: 800px;
 }
 @media (max-width: 768px) {
   .listahabilidades {
@@ -651,7 +650,7 @@ section {
   margin: auto;
   border: 2px solid var(--primary-light-10);
   width: 80%;
-  max-width: 1000px;
+  max-width: 760px;
   padding: 30px 40px;
 }
 #linkDesplegable {
@@ -694,7 +693,7 @@ section {
 }
 .lista {
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto 30px auto;
   max-width: 70%;
 }
 .listado {
