--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ body {
 #wrapper {
   width: 100%;
   max-width: 100vw;
-  height: 100%;
   color: var(--text-color);
 }
 #wrapper section {
@@ -281,7 +280,7 @@ nav .menu a.active {
   border: none;
 }
 #hero {
-  transition: 0s;
+  transition: none;
   position: relative;
   background-image: var(--gradient2);
   background-color: var(--gradient-color2);
