--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,12 @@ a {
 a:hover {
   color: var(--primary-light-10);
 }
+.colorlink{
+  color: var(--primary-light-00);
+}
+.colorlink:hover{
+  color: var(--secondary-light-00);
+}
 ::-webkit-scrollbar {
   width: 14px;
 }
@@ -565,6 +571,9 @@ section {
   grid-template-columns: 1fr 1fr;
   gap: 40px;
 }
+#galeria {
+  scroll-margin-top: 100px;
+}
 #sobremi {
   scroll-margin-top: 100px;
 }
@@ -927,7 +936,52 @@ form button:hover {
   align-items: center;
 }
 
+/* //galeria */
 
+.containergaleria {
+  width: 90%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, auto);
+  gap: 10px;
+}
+@media screen and (max-width: 1400px) {
+  .containergaleria {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media screen and (max-width: 1000px) {
+  .containergaleria {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 768px) {
+  .containergaleria {
+    grid-template-columns: repeat(2, 1fr);
+
+  }
+}
+@media screen and (max-width: 400px) {
+  .containergaleria {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.itemgaleria {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.itemgaleria img {
+  border: 2px solid var(--neutral-dark-20);
+  width: 100%;
+  height: auto;
+}
+
+.textgaleria {
+  margin-top: 8px;
+}
 
 /*  ICONOS  */
 
@@ -1381,6 +1435,11 @@ form button:hover {
 .animacionfadeDown3 {
   animation: fadeDown 0.4s ease-in-out;
   animation-delay: 0.4s;
+  animation-fill-mode: both;
+}
+.animacionfadeDown4 {
+  animation: fadeDown 0.4s ease-in-out;
+  animation-delay: 0.6s;
   animation-fill-mode: both;
 }
 @keyframes desaparicionsuperior {
